@@ -1,5 +1,15 @@
 2005-05-10  Christian Persch  <chpe@cvs.gnome.org>
 
+	* src/Makefile.am:
+	* src/Writer.cpp:
+	* src/Writer.h:
+
+	Fix crash in the PNG writer when Prepare was never called.
+	Adapt to changed behaviour in nsIViewManager::RenderOffscreen;
+	the rect is now converted (and rounded, urgh) to pixels.
+
+2005-05-10  Christian Persch  <chpe@cvs.gnome.org>
+
 	* data/Makefile.am:
 	* data/style.css:
 	* src/main.cpp: (init_gecko):
